build/src/main/antlr4/br/ufscar/dc/compiladores/build/BUILD.g4
grammar BUILD;

NUMERO: ('0'..'9')+;
PECA: ('A'..'Z')(('a'..'z') | ('A'..'Z'))*;
TEMPERO: ('a'..'z')+;
CADEIA:'"' ( ESC_SEQ | ~('"') )* '"';
fragment ESC_SEQ: '\\"';
COMENTARIO:'$' ~('\n'|'\r')* '\r'? '\n' -> skip;
WS: ( ' ' |'\t' | '\r' | '\n')+ -> skip;

montagem: 'montagem' nome imagem? tempo_mont paragrafo* componentes passo 'fim_montagem' EOF;
imagem: 'Imagem' ':' CADEIA;
nome: 'Nome' ':' CADEIA;
tempo_mont: 'Tempo' ':' tempo+;
unidade_tempo: 'hora' | 'min' | 'seg';
paragrafo: 'Paragrafo' ':' CADEIA; 
componentes: 'Componentes' ':' lista_pecas+ lista_tempero* 'fim_componentes';
lista_pecas: (medida_solido | medida_liq) 'de' PECA;
medida_solido: NUMERO ('g' | 'colher' tipo_colher | 'xicara');
medida_liq: NUMERO ('ml' | 'l' | 'xicara' | 'copo');
lista_tempero: NUMERO (peso='g' | 'colher' tipo_colher | 'xicara') 'de' TEMPERO | pitada='pitada' TEMPERO | TEMPERO a_gosto='a_gosto';
tipo_colher: 'cha' | 'sobremesa' | 'sopa';
passo: 'Passo' ':' cmd* 'fim_passo'; 
cmd: cmdAparafuse | cmdCozinhe | cmdMisture | cmdCorte | cmdBata | cmdTeste | cmdEtapa | cmdPao_de_Lo | cmdCobertura | cmdArroz | cmdCadeira;
cmdAparafuse: 'aparafuse' '(' PECA ')';
cmdCozinhe: 'cozinhe' '(' PECA ',' tempo ')';
cmdMisture: 'misture' '(' PECA (',' PECA)+ ')';
cmdCorte: 'corte' '(' PECA ',' tipo_corte ')';
cmdBata: 'bata' '(' PECA (',' PECA)+ ')';
cmdTeste: 'teste' '(' tempo ')';
cmdEtapa: 'etapa' '(' CADEIA ')';
cmdPao_de_Lo: 'Pao_de_Lo' '(' ')';
cmdCobertura: 'cobertura' '(' ')';
cmdArroz: 'arroz' '(' ')';
cmdCadeira: 'cadeira' '(' ')';
tipo_corte: 'picar' | 'ralar' | 'cortar';
tempo: NUMERO unidade_tempo;
