build/target/generated-sources/antlr4/br/ufscar/dc/compiladores/build/BUILDParser.java
// Generated from br\u005Cufscar\dc\compiladores\build\BUILD.g4 by ANTLR 4.7.2
package br.ufscar.dc.compiladores.build;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BUILDParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, NUMERO=44, PECA=45, 
		TEMPERO=46, CADEIA=47, COMENTARIO=48, WS=49;
	public static final int
		RULE_montagem = 0, RULE_imagem = 1, RULE_nome = 2, RULE_tempo_mont = 3, 
		RULE_unidade_tempo = 4, RULE_paragrafo = 5, RULE_componentes = 6, RULE_lista_pecas = 7, 
		RULE_medida_solido = 8, RULE_medida_liq = 9, RULE_lista_tempero = 10, 
		RULE_tipo_colher = 11, RULE_passo = 12, RULE_cmd = 13, RULE_cmdAparafuse = 14, 
		RULE_cmdCozinhe = 15, RULE_cmdMisture = 16, RULE_cmdCorte = 17, RULE_cmdBata = 18, 
		RULE_cmdTeste = 19, RULE_cmdEtapa = 20, RULE_cmdPao_de_Lo = 21, RULE_cmdCobertura = 22, 
		RULE_cmdArroz = 23, RULE_cmdCadeira = 24, RULE_tipo_corte = 25, RULE_tempo = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"montagem", "imagem", "nome", "tempo_mont", "unidade_tempo", "paragrafo", 
			"componentes", "lista_pecas", "medida_solido", "medida_liq", "lista_tempero", 
			"tipo_colher", "passo", "cmd", "cmdAparafuse", "cmdCozinhe", "cmdMisture", 
			"cmdCorte", "cmdBata", "cmdTeste", "cmdEtapa", "cmdPao_de_Lo", "cmdCobertura", 
			"cmdArroz", "cmdCadeira", "tipo_corte", "tempo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'montagem'", "'fim_montagem'", "'Imagem'", "':'", "'Nome'", "'Tempo'", 
			"'hora'", "'min'", "'seg'", "'Paragrafo'", "'Componentes'", "'fim_componentes'", 
			"'de'", "'g'", "'colher'", "'xicara'", "'ml'", "'l'", "'copo'", "'pitada'", 
			"'a_gosto'", "'cha'", "'sobremesa'", "'sopa'", "'Passo'", "'fim_passo'", 
			"'aparafuse'", "'('", "')'", "'cozinhe'", "','", "'misture'", "'corte'", 
			"'bata'", "'teste'", "'etapa'", "'Pao_de_Lo'", "'cobertura'", "'arroz'", 
			"'cadeira'", "'picar'", "'ralar'", "'cortar'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "NUMERO", "PECA", "TEMPERO", 
			"CADEIA", "COMENTARIO", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "BUILD.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BUILDParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class MontagemContext extends ParserRuleContext {
		public NomeContext nome() {
			return getRuleContext(NomeContext.class,0);
		}
		public Tempo_montContext tempo_mont() {
			return getRuleContext(Tempo_montContext.class,0);
		}
		public ComponentesContext componentes() {
			return getRuleContext(ComponentesContext.class,0);
		}
		public PassoContext passo() {
			return getRuleContext(PassoContext.class,0);
		}
		public TerminalNode EOF() { return getToken(BUILDParser.EOF, 0); }
		public ImagemContext imagem() {
			return getRuleContext(ImagemContext.class,0);
		}
		public List<ParagrafoContext> paragrafo() {
			return getRuleContexts(ParagrafoContext.class);
		}
		public ParagrafoContext paragrafo(int i) {
			return getRuleContext(ParagrafoContext.class,i);
		}
		public MontagemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_montagem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BUILDListener ) ((BUILDListener)listener).enterMontagem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BUILDListener ) ((BUILDListener)listener).exitMontagem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BUILDVisitor ) return ((BUILDVisitor<? extends T>)visitor).visitMontagem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MontagemContext montagem() throws RecognitionException {
		MontagemContext _localctx = new MontagemContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_montagem);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(T__0);
			setState(55);
			nome();
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(56);
				imagem();
				}
			}

			setState(59);
			tempo_mont();
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__9) {
				{
				{
				setState(60);
				paragrafo();
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(66);
			componentes();
			setState(67);
			passo();
			setState(68);
			match(T__1);
			setState(69);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImagemContext extends ParserRuleContext {
		public TerminalNode CADEIA() { return getToken(BUILDParser.CADEIA, 0); }
		public ImagemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imagem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BUILDListener ) ((BUILDListener)listener).enterImagem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BUILDListener ) ((BUILDListener)listener).exitImagem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BUILDVisitor ) return ((BUILDVisitor<? extends T>)visitor).visitImagem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImagemContext imagem() throws RecognitionException {
		ImagemContext _localctx = new ImagemContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_imagem);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(T__2);
			setState(72);
			match(T__3);
			setState(73);
			match(CADEIA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NomeContext extends ParserRuleContext {
		public TerminalNode CADEIA() { return getToken(BUILDParser.CADEIA, 0); }
		public NomeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nome; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BUILDListener ) ((BUILDListener)listener).enterNome(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BUILDListener ) ((BUILDListener)listener).exitNome(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BUILDVisitor ) return ((BUILDVisitor<? extends T>)visitor).visitNome(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NomeContext nome() throws RecognitionException {
		NomeContext _localctx = new NomeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_nome);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(T__4);
			setState(76);
			match(T__3);
			setState(77);
			match(CADEIA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tempo_montContext extends ParserRuleContext {
		public List<TempoContext> tempo() {
			return getRuleContexts(TempoContext.class);
		}
		public TempoContext tempo(int i) {
			return getRuleContext(TempoContext.class,i);
		}
		public Tempo_montContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tempo_mont; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BUILDListener ) ((BUILDListener)listener).enterTempo_mont(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BUILDListener ) ((BUILDListener)listener).exitTempo_mont(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BUILDVisitor ) return ((BUILDVisitor<? extends T>)visitor).visitTempo_mont(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Tempo_montContext tempo_mont() throws RecognitionException {
		Tempo_montContext _localctx = new Tempo_montContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tempo_mont);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(T__5);
			setState(80);
			match(T__3);
			setState(82); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(81);
				tempo();
				}
				}
				setState(84); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NUMERO );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Unidade_tempoContext extends ParserRuleContext {
		public Unidade_tempoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unidade_tempo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BUILDListener ) ((BUILDListener)listener).enterUnidade_tempo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BUILDListener ) ((BUILDListener)listener).exitUnidade_tempo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BUILDVisitor ) return ((BUILDVisitor<? extends T>)visitor).visitUnidade_tempo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Unidade_tempoContext unidade_tempo() throws RecognitionException {
		Unidade_tempoContext _localctx = new Unidade_tempoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_unidade_tempo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__7) | (1L << T__8))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParagrafoContext extends ParserRuleContext {
		public TerminalNode CADEIA() { return getToken(BUILDParser.CADEIA, 0); }
		public ParagrafoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paragrafo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BUILDListener ) ((BUILDListener)listener).enterParagrafo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BUILDListener ) ((BUILDListener)listener).exitParagrafo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BUILDVisitor ) return ((BUILDVisitor<? extends T>)visitor).visitParagrafo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParagrafoContext paragrafo() throws RecognitionException {
		ParagrafoContext _localctx = new ParagrafoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_paragrafo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(T__9);
			setState(89);
			match(T__3);
			setState(90);
			match(CADEIA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComponentesContext extends ParserRuleContext {
		public List<Lista_pecasContext> lista_pecas() {
			return getRuleContexts(Lista_pecasContext.class);
		}
		public Lista_pecasContext lista_pecas(int i) {
			return getRuleContext(Lista_pecasContext.class,i);
		}
		public List<Lista_temperoContext> lista_tempero() {
			return getRuleContexts(Lista_temperoContext.class);
		}
		public Lista_temperoContext lista_tempero(int i) {
			return getRuleContext(Lista_temperoContext.class,i);
		}
		public ComponentesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BUILDListener ) ((BUILDListener)listener).enterComponentes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BUILDListener ) ((BUILDListener)listener).exitComponentes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BUILDVisitor ) return ((BUILDVisitor<? extends T>)visitor).visitComponentes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentesContext componentes() throws RecognitionException {
		ComponentesContext _localctx = new ComponentesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_componentes);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(T__10);
			setState(93);
			match(T__3);
			setState(95); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(94);
					lista_pecas();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(97); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__19) | (1L << NUMERO) | (1L << TEMPERO))) != 0)) {
				{
				{
				setState(99);
				lista_tempero();
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105);
			match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Lista_pecasContext extends ParserRuleContext {
		public TerminalNode PECA() { return getToken(BUILDParser.PECA, 0); }
		public Medida_solidoContext medida_solido() {
			return getRuleContext(Medida_solidoContext.class,0);
		}
		public Medida_liqContext medida_liq() {
			return getRuleContext(Medida_liqContext.class,0);
		}
		public Lista_pecasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista_pecas; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BUILDListener ) ((BUILDListener)listener).enterLista_pecas(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BUILDListener ) ((BUILDListener)listener).exitLista_pecas(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BUILDVisitor ) return ((BUILDVisitor<? extends T>)visitor).visitLista_pecas(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Lista_pecasContext lista_pecas() throws RecognitionException {
		Lista_pecasContext _localctx = new Lista_pecasContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_lista_pecas);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(107);
				medida_solido();
				}
				break;
			case 2:
				{
				setState(108);
				medida_liq();
				}
				break;
			}
			setState(111);
			match(T__12);
			setState(112);
			match(PECA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Medida_solidoContext extends ParserRuleContext {
		public TerminalNode NUMERO() { return getToken(BUILDParser.NUMERO, 0); }
		public Tipo_colherContext tipo_colher() {
			return getRuleContext(Tipo_colherContext.class,0);
		}
		public Medida_solidoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_medida_solido; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BUILDListener ) ((BUILDListener)listener).enterMedida_solido(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BUILDListener ) ((BUILDListener)listener).exitMedida_solido(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BUILDVisitor ) return ((BUILDVisitor<? extends T>)visitor).visitMedida_solido(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Medida_solidoContext medida_solido() throws RecognitionException {
		Medida_solidoContext _localctx = new Medida_solidoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_medida_solido);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(NUMERO);
			setState(119);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__13:
				{
				setState(115);
				match(T__13);
				}
				break;
			case T__14:
				{
				setState(116);
				match(T__14);
				setState(117);
				tipo_colher();
				}
				break;
			case T__15:
				{
				setState(118);
				match(T__15);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Medida_liqContext extends ParserRuleContext {
		public TerminalNode NUMERO() { return getToken(BUILDParser.NUMERO, 0); }
		public Medida_liqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_medida_liq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BUILDListener ) ((BUILDListener)listener).enterMedida_liq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BUILDListener ) ((BUILDListener)listener).exitMedida_liq(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BUILDVisitor ) return ((BUILDVisitor<? extends T>)visitor).visitMedida_liq(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Medida_liqContext medida_liq() throws RecognitionException {
		Medida_liqContext _localctx = new Medida_liqContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_medida_liq);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(NUMERO);
			setState(122);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Lista_temperoContext extends ParserRuleContext {
		public Token peso;
		public Token pitada;
		public Token a_gosto;
		public TerminalNode NUMERO() { return getToken(BUILDParser.NUMERO, 0); }
		public TerminalNode TEMPERO() { return getToken(BUILDParser.TEMPERO, 0); }
		public Tipo_colherContext tipo_colher() {
			return getRuleContext(Tipo_colherContext.class,0);
		}
		public Lista_temperoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista_tempero; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BUILDListener ) ((BUILDListener)listener).enterLista_tempero(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BUILDListener ) ((BUILDListener)listener).exitLista_tempero(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BUILDVisitor ) return ((BUILDVisitor<? extends T>)visitor).visitLista_tempero(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Lista_temperoContext lista_tempero() throws RecognitionException {
		Lista_temperoContext _localctx = new Lista_temperoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_lista_tempero);
		try {
			setState(137);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMERO:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				match(NUMERO);
				setState(129);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__13:
					{
					setState(125);
					((Lista_temperoContext)_localctx).peso = match(T__13);
					}
					break;
				case T__14:
					{
					setState(126);
					match(T__14);
					setState(127);
					tipo_colher();
					}
					break;
				case T__15:
					{
					setState(128);
					match(T__15);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(131);
				match(T__12);
				setState(132);
				match(TEMPERO);
				}
				break;
			case T__19:
				enterOuterAlt(_localctx, 2);
				{
				setState(133);
				((Lista_temperoContext)_localctx).pitada = match(T__19);
				setState(134);
				match(TEMPERO);
				}
				break;
			case TEMPERO:
				enterOuterAlt(_localctx, 3);
				{
				setState(135);
				match(TEMPERO);
				setState(136);
				((Lista_temperoContext)_localctx).a_gosto = match(T__20);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tipo_colherContext extends ParserRuleContext {
		public Tipo_colherContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo_colher; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BUILDListener ) ((BUILDListener)listener).enterTipo_colher(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BUILDListener ) ((BUILDListener)listener).exitTipo_colher(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BUILDVisitor ) return ((BUILDVisitor<? extends T>)visitor).visitTipo_colher(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Tipo_colherContext tipo_colher() throws RecognitionException {
		Tipo_colherContext _localctx = new Tipo_colherContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_tipo_colher);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__21) | (1L << T__22) | (1L << T__23))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PassoContext extends ParserRuleContext {
		public List<CmdContext> cmd() {
			return getRuleContexts(CmdContext.class);
		}
		public CmdContext cmd(int i) {
			return getRuleContext(CmdContext.class,i);
		}
		public PassoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_passo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BUILDListener ) ((BUILDListener)listener).enterPasso(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BUILDListener ) ((BUILDListener)listener).exitPasso(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BUILDVisitor ) return ((BUILDVisitor<? extends T>)visitor).visitPasso(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PassoContext passo() throws RecognitionException {
		PassoContext _localctx = new PassoContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_passo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(T__24);
			setState(142);
			match(T__3);
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__26) | (1L << T__29) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__37) | (1L << T__38) | (1L << T__39))) != 0)) {
				{
				{
				setState(143);
				cmd();
				}
				}
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(149);
			match(T__25);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
